cdk/gw_stack/cdk.out/gw-graph-stack.template.json
{
  "Resources": {
    "GWVpc58472F73": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "gw-graph-stack/GWVpc"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "gw-graph-stack/GWVpc/Resource"
      }
    },
    "GWVpcPublicSubnet1Subnet49EB8E88": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.0.0/18",
        "VpcId": {
          "Ref": "GWVpc58472F73"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "gw-graph-stack/GWVpc/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "gw-graph-stack/GWVpc/PublicSubnet1/Subnet"
      }
    },
    "GWVpcPublicSubnet1RouteTableE63551F4": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "GWVpc58472F73"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "gw-graph-stack/GWVpc/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "gw-graph-stack/GWVpc/PublicSubnet1/RouteTable"
      }
    },
    "GWVpcPublicSubnet1RouteTableAssociation41FA31F9": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "GWVpcPublicSubnet1RouteTableE63551F4"
        },
        "SubnetId": {
          "Ref": "GWVpcPublicSubnet1Subnet49EB8E88"
        }
      },
      "Metadata": {
        "aws:cdk:path": "gw-graph-stack/GWVpc/PublicSubnet1/RouteTableAssociation"
      }
    },
    "GWVpcPublicSubnet1DefaultRoute76558746": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "GWVpcPublicSubnet1RouteTableE63551F4"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "GWVpcIGW0A019878"
        }
      },
      "DependsOn": [
        "GWVpcVPCGW69CA13EA"
      ],
      "Metadata": {
        "aws:cdk:path": "gw-graph-stack/GWVpc/PublicSubnet1/DefaultRoute"
      }
    },
    "GWVpcPublicSubnet1EIPCA50B005": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "gw-graph-stack/GWVpc/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "gw-graph-stack/GWVpc/PublicSubnet1/EIP"
      }
    },
    "GWVpcPublicSubnet1NATGatewayF606BAFC": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "GWVpcPublicSubnet1EIPCA50B005",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "GWVpcPublicSubnet1Subnet49EB8E88"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "gw-graph-stack/GWVpc/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "gw-graph-stack/GWVpc/PublicSubnet1/NATGateway"
      }
    },
    "GWVpcPublicSubnet2Subnet1A7D037F": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.64.0/18",
        "VpcId": {
          "Ref": "GWVpc58472F73"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "gw-graph-stack/GWVpc/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "gw-graph-stack/GWVpc/PublicSubnet2/Subnet"
      }
    },
    "GWVpcPublicSubnet2RouteTable9CBCC6AE": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "GWVpc58472F73"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "gw-graph-stack/GWVpc/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "gw-graph-stack/GWVpc/PublicSubnet2/RouteTable"
      }
    },
    "GWVpcPublicSubnet2RouteTableAssociation199E05BE": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "GWVpcPublicSubnet2RouteTable9CBCC6AE"
        },
        "SubnetId": {
          "Ref": "GWVpcPublicSubnet2Subnet1A7D037F"
        }
      },
      "Metadata": {
        "aws:cdk:path": "gw-graph-stack/GWVpc/PublicSubnet2/RouteTableAssociation"
      }
    },
    "GWVpcPublicSubnet2DefaultRoute200BE8FE": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "GWVpcPublicSubnet2RouteTable9CBCC6AE"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "GWVpcIGW0A019878"
        }
      },
      "DependsOn": [
        "GWVpcVPCGW69CA13EA"
      ],
      "Metadata": {
        "aws:cdk:path": "gw-graph-stack/GWVpc/PublicSubnet2/DefaultRoute"
      }
    },
    "GWVpcPublicSubnet2EIP0AD6BCED": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "gw-graph-stack/GWVpc/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "gw-graph-stack/GWVpc/PublicSubnet2/EIP"
      }
    },
    "GWVpcPublicSubnet2NATGateway6931392F": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "GWVpcPublicSubnet2EIP0AD6BCED",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "GWVpcPublicSubnet2Subnet1A7D037F"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "gw-graph-stack/GWVpc/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "gw-graph-stack/GWVpc/PublicSubnet2/NATGateway"
      }
    },
    "GWVpcPrivateSubnet1Subnet5A9ADB27": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.128.0/18",
        "VpcId": {
          "Ref": "GWVpc58472F73"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "gw-graph-stack/GWVpc/PrivateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "gw-graph-stack/GWVpc/PrivateSubnet1/Subnet"
      }
    },
    "GWVpcPrivateSubnet1RouteTableBCA0508E": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "GWVpc58472F73"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "gw-graph-stack/GWVpc/PrivateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "gw-graph-stack/GWVpc/PrivateSubnet1/RouteTable"
      }
    },
    "GWVpcPrivateSubnet1RouteTableAssociation44914524": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "GWVpcPrivateSubnet1RouteTableBCA0508E"
        },
        "SubnetId": {
          "Ref": "GWVpcPrivateSubnet1Subnet5A9ADB27"
        }
      },
      "Metadata": {
        "aws:cdk:path": "gw-graph-stack/GWVpc/PrivateSubnet1/RouteTableAssociation"
      }
    },
    "GWVpcPrivateSubnet1DefaultRoute5A8694FA": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "GWVpcPrivateSubnet1RouteTableBCA0508E"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "GWVpcPublicSubnet1NATGatewayF606BAFC"
        }
      },
      "Metadata": {
        "aws:cdk:path": "gw-graph-stack/GWVpc/PrivateSubnet1/DefaultRoute"
      }
    },
    "GWVpcPrivateSubnet2Subnet19729786": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.192.0/18",
        "VpcId": {
          "Ref": "GWVpc58472F73"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "gw-graph-stack/GWVpc/PrivateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "gw-graph-stack/GWVpc/PrivateSubnet2/Subnet"
      }
    },
    "GWVpcPrivateSubnet2RouteTable6364FB63": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "GWVpc58472F73"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "gw-graph-stack/GWVpc/PrivateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "gw-graph-stack/GWVpc/PrivateSubnet2/RouteTable"
      }
    },
    "GWVpcPrivateSubnet2RouteTableAssociationA4D6943A": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "GWVpcPrivateSubnet2RouteTable6364FB63"
        },
        "SubnetId": {
          "Ref": "GWVpcPrivateSubnet2Subnet19729786"
        }
      },
      "Metadata": {
        "aws:cdk:path": "gw-graph-stack/GWVpc/PrivateSubnet2/RouteTableAssociation"
      }
    },
    "GWVpcPrivateSubnet2DefaultRoute16B5F270": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "GWVpcPrivateSubnet2RouteTable6364FB63"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "GWVpcPublicSubnet2NATGateway6931392F"
        }
      },
      "Metadata": {
        "aws:cdk:path": "gw-graph-stack/GWVpc/PrivateSubnet2/DefaultRoute"
      }
    },
    "GWVpcIGW0A019878": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "gw-graph-stack/GWVpc"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "gw-graph-stack/GWVpc/IGW"
      }
    },
    "GWVpcVPCGW69CA13EA": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "GWVpc58472F73"
        },
        "InternetGatewayId": {
          "Ref": "GWVpcIGW0A019878"
        }
      },
      "Metadata": {
        "aws:cdk:path": "gw-graph-stack/GWVpc/VPCGW"
      }
    },
    "gwlambdatrainroleD4532D6A": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition"
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
              ]
            ]
          },
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition"
                },
                ":iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole"
              ]
            ]
          },
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition"
                },
                ":iam::aws:policy/AmazonSageMakerFullAccess"
              ]
            ]
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "gw-graph-stack/gw_lambda_train_role/Resource"
      }
    },
    "gwsagemakertrainroleF0C213EC": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "sagemaker.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition"
                },
                ":iam::aws:policy/AmazonS3FullAccess"
              ]
            ]
          },
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition"
                },
                ":iam::aws:policy/AmazonSageMakerFullAccess"
              ]
            ]
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "gw-graph-stack/gw_sagemaker_train_role/Resource"
      }
    },
    "FargateTaskExecutionServiceRole0484E2D1": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition"
                },
                ":iam::aws:policy/AmazonS3FullAccess"
              ]
            ]
          },
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition"
                },
                ":iam::aws:policy/AmazonECS_FullAccess"
              ]
            ]
          },
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition"
                },
                ":iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy"
              ]
            ]
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "gw-graph-stack/FargateTaskExecutionServiceRole/Resource"
      }
    },
    "FargateTaskExecutionServiceRoleDefaultPolicyDBE5CDC5": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "ecr:GetAuthorizationToken",
                "ecr:BatchCheckLayerAvailability",
                "ecr:GetDownloadUrlForLayer",
                "ecr:BatchGetImage",
                "logs:CreateLogStream",
                "logs:PutLogEvents"
              ],
              "Effect": "Allow",
              "Resource": "*"
            },
            {
              "Action": [
                "ecr:BatchCheckLayerAvailability",
                "ecr:GetDownloadUrlForLayer",
                "ecr:BatchGetImage"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition"
                    },
                    ":ecr:",
                    {
                      "Ref": "AWS::Region"
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId"
                    },
                    ":repository/sagemaker-recsys-graph-inference"
                  ]
                ]
              }
            },
            {
              "Action": "ecr:GetAuthorizationToken",
              "Effect": "Allow",
              "Resource": "*"
            },
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "graphinferencetaskdefinitiongraphinferencecontainerLogGroupE18090C3",
                  "Arn"
                ]
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "FargateTaskExecutionServiceRoleDefaultPolicyDBE5CDC5",
        "Roles": [
          {
            "Ref": "FargateTaskExecutionServiceRole0484E2D1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "gw-graph-stack/FargateTaskExecutionServiceRole/DefaultPolicy/Resource"
      }
    },
    "fargateserviceautoscalingD107CF93": {
      "Type": "AWS::ECS::Cluster",
      "Metadata": {
        "aws:cdk:path": "gw-graph-stack/fargate-service-autoscaling/Resource"
      }
    },
    "graphinferencetaskdefinitionDC0AB1F4": {
      "Type": "AWS::ECS::TaskDefinition",
      "Properties": {
        "ContainerDefinitions": [
          {
            "Environment": [
              {
                "Name": "KG_PATH",
                "Value": "s3://autorec"
              }
            ],
            "Essential": true,
            "Image": {
              "Fn::Join": [
                "",
                [
                  {
                    "Ref": "AWS::AccountId"
                  },
                  ".dkr.ecr.",
                  {
                    "Ref": "AWS::Region"
                  },
                  ".",
                  {
                    "Ref": "AWS::URLSuffix"
                  },
                  "/sagemaker-recsys-graph-inference:latest"
                ]
              ]
            },
            "LogConfiguration": {
              "LogDriver": "awslogs",
              "Options": {
                "awslogs-group": {
                  "Ref": "graphinferencetaskdefinitiongraphinferencecontainerLogGroupE18090C3"
                },
                "awslogs-stream-prefix": "graph-inference",
                "awslogs-region": {
                  "Ref": "AWS::Region"
                }
              }
            },
            "Name": "graph-inference-container",
            "PortMappings": [
              {
                "ContainerPort": 8080,
                "HostPort": 8080,
                "Protocol": "tcp"
              }
            ]
          }
        ],
        "Cpu": "2048",
        "ExecutionRoleArn": {
          "Fn::GetAtt": [
            "FargateTaskExecutionServiceRole0484E2D1",
            "Arn"
          ]
        },
        "Family": "gwgraphstackgraphinferencetaskdefinitionE77945EC",
        "Memory": "4096",
        "NetworkMode": "awsvpc",
        "RequiresCompatibilities": [
          "FARGATE"
        ],
        "TaskRoleArn": {
          "Fn::GetAtt": [
            "FargateTaskExecutionServiceRole0484E2D1",
            "Arn"
          ]
        }
      },
      "Metadata": {
        "aws:cdk:path": "gw-graph-stack/graph-inference-task-definition/Resource"
      }
    },
    "graphinferencetaskdefinitiongraphinferencecontainerLogGroupE18090C3": {
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
      "DeletionPolicy": "Retain",
      "Metadata": {
        "aws:cdk:path": "gw-graph-stack/graph-inference-task-definition/graph-inference-container/LogGroup/Resource"
      }
    },
    "graphinferenceserviceLB9009C70A": {
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
      "Properties": {
        "LoadBalancerAttributes": [
          {
            "Key": "deletion_protection.enabled",
            "Value": "false"
          }
        ],
        "Scheme": "internet-facing",
        "Subnets": [
          {
            "Ref": "GWVpcPublicSubnet1Subnet49EB8E88"
          },
          {
            "Ref": "GWVpcPublicSubnet2Subnet1A7D037F"
          }
        ],
        "Type": "network"
      },
      "DependsOn": [
        "GWVpcPublicSubnet1DefaultRoute76558746",
        "GWVpcPublicSubnet2DefaultRoute200BE8FE"
      ],
      "Metadata": {
        "aws:cdk:path": "gw-graph-stack/graph-inference-service/LB/Resource"
      }
    },
    "graphinferenceserviceLBPublicListener339C26B4": {
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
      "Properties": {
        "DefaultActions": [
          {
            "TargetGroupArn": {
              "Ref": "graphinferenceserviceLBPublicListenerECSGroupE47406D2"
            },
            "Type": "forward"
          }
        ],
        "LoadBalancerArn": {
          "Ref": "graphinferenceserviceLB9009C70A"
        },
        "Port": 80,
        "Protocol": "TCP"
      },
      "Metadata": {
        "aws:cdk:path": "gw-graph-stack/graph-inference-service/LB/PublicListener/Resource"
      }
    },
    "graphinferenceserviceLBPublicListenerECSGroupE47406D2": {
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
      "Properties": {
        "Port": 80,
        "Protocol": "TCP",
        "TargetType": "ip",
        "VpcId": {
          "Ref": "GWVpc58472F73"
        }
      },
      "Metadata": {
        "aws:cdk:path": "gw-graph-stack/graph-inference-service/LB/PublicListener/ECSGroup/Resource"
      }
    },
    "graphinferenceserviceServiceD46966A2": {
      "Type": "AWS::ECS::Service",
      "Properties": {
        "Cluster": {
          "Ref": "fargateserviceautoscalingD107CF93"
        },
        "DeploymentConfiguration": {
          "MaximumPercent": 200,
          "MinimumHealthyPercent": 50
        },
        "DesiredCount": 1,
        "EnableECSManagedTags": false,
        "HealthCheckGracePeriodSeconds": 60,
        "LaunchType": "FARGATE",
        "LoadBalancers": [
          {
            "ContainerName": "graph-inference-container",
            "ContainerPort": 8080,
            "TargetGroupArn": {
              "Ref": "graphinferenceserviceLBPublicListenerECSGroupE47406D2"
            }
          }
        ],
        "NetworkConfiguration": {
          "AwsvpcConfiguration": {
            "AssignPublicIp": "ENABLED",
            "SecurityGroups": [
              {
                "Fn::GetAtt": [
                  "graphinferenceserviceServiceSecurityGroup5B55F824",
                  "GroupId"
                ]
              }
            ],
            "Subnets": [
              {
                "Ref": "GWVpcPublicSubnet1Subnet49EB8E88"
              },
              {
                "Ref": "GWVpcPublicSubnet2Subnet1A7D037F"
              }
            ]
          }
        },
        "TaskDefinition": {
          "Ref": "graphinferencetaskdefinitionDC0AB1F4"
        }
      },
      "DependsOn": [
        "graphinferenceserviceLBPublicListenerECSGroupE47406D2",
        "graphinferenceserviceLBPublicListener339C26B4"
      ],
      "Metadata": {
        "aws:cdk:path": "gw-graph-stack/graph-inference-service/Service/Service"
      }
    },
    "graphinferenceserviceServiceSecurityGroup5B55F824": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "gw-graph-stack/graph-inference-service/Service/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow http inbound from VPC",
            "FromPort": 8080,
            "IpProtocol": "tcp",
            "ToPort": 8080
          }
        ],
        "VpcId": {
          "Ref": "GWVpc58472F73"
        }
      },
      "Metadata": {
        "aws:cdk:path": "gw-graph-stack/graph-inference-service/Service/SecurityGroup/Resource"
      }
    },
    "graphinferenceserviceServiceTaskCountTargetD151BF2C": {
      "Type": "AWS::ApplicationAutoScaling::ScalableTarget",
      "Properties": {
        "MaxCapacity": 2,
        "MinCapacity": 1,
        "ResourceId": {
          "Fn::Join": [
            "",
            [
              "service/",
              {
                "Ref": "fargateserviceautoscalingD107CF93"
              },
              "/",
              {
                "Fn::GetAtt": [
                  "graphinferenceserviceServiceD46966A2",
                  "Name"
                ]
              }
            ]
          ]
        },
        "RoleARN": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition"
              },
              ":iam::",
              {
                "Ref": "AWS::AccountId"
              },
              ":role/aws-service-role/ecs.application-autoscaling.amazonaws.com/AWSServiceRoleForApplicationAutoScaling_ECSService"
            ]
          ]
        },
        "ScalableDimension": "ecs:service:DesiredCount",
        "ServiceNamespace": "ecs"
      },
      "Metadata": {
        "aws:cdk:path": "gw-graph-stack/graph-inference-service/Service/TaskCount/Target/Resource"
      }
    },
    "graphinferenceserviceServiceTaskCountTargetCpuScaling42A4EDC7": {
      "Type": "AWS::ApplicationAutoScaling::ScalingPolicy",
      "Properties": {
        "PolicyName": "gwgraphstackgraphinferenceserviceServiceTaskCountTargetCpuScaling53F80ECF",
        "PolicyType": "TargetTrackingScaling",
        "ScalingTargetId": {
          "Ref": "graphinferenceserviceServiceTaskCountTargetD151BF2C"
        },
        "TargetTrackingScalingPolicyConfiguration": {
          "PredefinedMetricSpecification": {
            "PredefinedMetricType": "ECSServiceAverageCPUUtilization"
          },
          "ScaleInCooldown": 60,
          "ScaleOutCooldown": 60,
          "TargetValue": 50
        }
      },
      "Metadata": {
        "aws:cdk:path": "gw-graph-stack/graph-inference-service/Service/TaskCount/Target/CpuScaling/Resource"
      }
    },
    "CDKMetadata": {
      "Type": "AWS::CDK::Metadata",
      "Properties": {
        "Modules": "aws-cdk=1.74.0,@aws-cdk/assets=1.75.0,@aws-cdk/aws-apigateway=1.75.0,@aws-cdk/aws-apigatewayv2=1.75.0,@aws-cdk/aws-applicationautoscaling=1.75.0,@aws-cdk/aws-autoscaling=1.75.0,@aws-cdk/aws-autoscaling-common=1.75.0,@aws-cdk/aws-autoscaling-hooktargets=1.75.0,@aws-cdk/aws-batch=1.75.0,@aws-cdk/aws-certificatemanager=1.75.0,@aws-cdk/aws-cloudformation=1.75.0,@aws-cdk/aws-cloudfront=1.75.0,@aws-cdk/aws-cloudwatch=1.75.0,@aws-cdk/aws-codebuild=1.75.0,@aws-cdk/aws-codecommit=1.75 [...]
      },
      "Metadata": {
        "aws:cdk:path": "gw-graph-stack/CDKMetadata/Default"
      },
      "Condition": "CDKMetadataAvailable"
    }
  },
  "Outputs": {
    "graphinferenceserviceLoadBalancerDNS68AC7189": {
      "Value": {
        "Fn::GetAtt": [
          "graphinferenceserviceLB9009C70A",
          "DNSName"
        ]
      }
    }
  },
  "Conditions": {
    "CDKMetadataAvailable": {
      "Fn::Or": [
        {
          "Fn::Or": [
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-east-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-northeast-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-northeast-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-southeast-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-southeast-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ca-central-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "cn-north-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "cn-northwest-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-central-1"
              ]
            }
          ]
        },
        {
          "Fn::Or": [
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-north-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-west-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-west-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-west-3"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "me-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "sa-east-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-east-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-east-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-west-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-west-2"
              ]
            }
          ]
        }
      ]
    }
  }
}
