cdk/gw_stack/cdk.out/gw-inferhandler-stack.template.json
{
  "Resources": {
    "GWVpc58472F73": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "gw-inferhandler-stack/GWVpc"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "gw-inferhandler-stack/GWVpc/Resource"
      }
    },
    "GWVpcPublicSubnet1Subnet49EB8E88": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.0.0/18",
        "VpcId": {
          "Ref": "GWVpc58472F73"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "gw-inferhandler-stack/GWVpc/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "gw-inferhandler-stack/GWVpc/PublicSubnet1/Subnet"
      }
    },
    "GWVpcPublicSubnet1RouteTableE63551F4": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "GWVpc58472F73"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "gw-inferhandler-stack/GWVpc/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "gw-inferhandler-stack/GWVpc/PublicSubnet1/RouteTable"
      }
    },
    "GWVpcPublicSubnet1RouteTableAssociation41FA31F9": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "GWVpcPublicSubnet1RouteTableE63551F4"
        },
        "SubnetId": {
          "Ref": "GWVpcPublicSubnet1Subnet49EB8E88"
        }
      },
      "Metadata": {
        "aws:cdk:path": "gw-inferhandler-stack/GWVpc/PublicSubnet1/RouteTableAssociation"
      }
    },
    "GWVpcPublicSubnet1DefaultRoute76558746": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "GWVpcPublicSubnet1RouteTableE63551F4"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "GWVpcIGW0A019878"
        }
      },
      "DependsOn": [
        "GWVpcVPCGW69CA13EA"
      ],
      "Metadata": {
        "aws:cdk:path": "gw-inferhandler-stack/GWVpc/PublicSubnet1/DefaultRoute"
      }
    },
    "GWVpcPublicSubnet1EIPCA50B005": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "gw-inferhandler-stack/GWVpc/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "gw-inferhandler-stack/GWVpc/PublicSubnet1/EIP"
      }
    },
    "GWVpcPublicSubnet1NATGatewayF606BAFC": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "GWVpcPublicSubnet1EIPCA50B005",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "GWVpcPublicSubnet1Subnet49EB8E88"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "gw-inferhandler-stack/GWVpc/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "gw-inferhandler-stack/GWVpc/PublicSubnet1/NATGateway"
      }
    },
    "GWVpcPublicSubnet2Subnet1A7D037F": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.64.0/18",
        "VpcId": {
          "Ref": "GWVpc58472F73"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "gw-inferhandler-stack/GWVpc/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "gw-inferhandler-stack/GWVpc/PublicSubnet2/Subnet"
      }
    },
    "GWVpcPublicSubnet2RouteTable9CBCC6AE": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "GWVpc58472F73"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "gw-inferhandler-stack/GWVpc/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "gw-inferhandler-stack/GWVpc/PublicSubnet2/RouteTable"
      }
    },
    "GWVpcPublicSubnet2RouteTableAssociation199E05BE": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "GWVpcPublicSubnet2RouteTable9CBCC6AE"
        },
        "SubnetId": {
          "Ref": "GWVpcPublicSubnet2Subnet1A7D037F"
        }
      },
      "Metadata": {
        "aws:cdk:path": "gw-inferhandler-stack/GWVpc/PublicSubnet2/RouteTableAssociation"
      }
    },
    "GWVpcPublicSubnet2DefaultRoute200BE8FE": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "GWVpcPublicSubnet2RouteTable9CBCC6AE"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "GWVpcIGW0A019878"
        }
      },
      "DependsOn": [
        "GWVpcVPCGW69CA13EA"
      ],
      "Metadata": {
        "aws:cdk:path": "gw-inferhandler-stack/GWVpc/PublicSubnet2/DefaultRoute"
      }
    },
    "GWVpcPublicSubnet2EIP0AD6BCED": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "gw-inferhandler-stack/GWVpc/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "gw-inferhandler-stack/GWVpc/PublicSubnet2/EIP"
      }
    },
    "GWVpcPublicSubnet2NATGateway6931392F": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "GWVpcPublicSubnet2EIP0AD6BCED",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "GWVpcPublicSubnet2Subnet1A7D037F"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "gw-inferhandler-stack/GWVpc/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "gw-inferhandler-stack/GWVpc/PublicSubnet2/NATGateway"
      }
    },
    "GWVpcPrivateSubnet1Subnet5A9ADB27": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.128.0/18",
        "VpcId": {
          "Ref": "GWVpc58472F73"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "gw-inferhandler-stack/GWVpc/PrivateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "gw-inferhandler-stack/GWVpc/PrivateSubnet1/Subnet"
      }
    },
    "GWVpcPrivateSubnet1RouteTableBCA0508E": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "GWVpc58472F73"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "gw-inferhandler-stack/GWVpc/PrivateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "gw-inferhandler-stack/GWVpc/PrivateSubnet1/RouteTable"
      }
    },
    "GWVpcPrivateSubnet1RouteTableAssociation44914524": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "GWVpcPrivateSubnet1RouteTableBCA0508E"
        },
        "SubnetId": {
          "Ref": "GWVpcPrivateSubnet1Subnet5A9ADB27"
        }
      },
      "Metadata": {
        "aws:cdk:path": "gw-inferhandler-stack/GWVpc/PrivateSubnet1/RouteTableAssociation"
      }
    },
    "GWVpcPrivateSubnet1DefaultRoute5A8694FA": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "GWVpcPrivateSubnet1RouteTableBCA0508E"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "GWVpcPublicSubnet1NATGatewayF606BAFC"
        }
      },
      "Metadata": {
        "aws:cdk:path": "gw-inferhandler-stack/GWVpc/PrivateSubnet1/DefaultRoute"
      }
    },
    "GWVpcPrivateSubnet2Subnet19729786": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.192.0/18",
        "VpcId": {
          "Ref": "GWVpc58472F73"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "gw-inferhandler-stack/GWVpc/PrivateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "gw-inferhandler-stack/GWVpc/PrivateSubnet2/Subnet"
      }
    },
    "GWVpcPrivateSubnet2RouteTable6364FB63": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "GWVpc58472F73"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "gw-inferhandler-stack/GWVpc/PrivateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "gw-inferhandler-stack/GWVpc/PrivateSubnet2/RouteTable"
      }
    },
    "GWVpcPrivateSubnet2RouteTableAssociationA4D6943A": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "GWVpcPrivateSubnet2RouteTable6364FB63"
        },
        "SubnetId": {
          "Ref": "GWVpcPrivateSubnet2Subnet19729786"
        }
      },
      "Metadata": {
        "aws:cdk:path": "gw-inferhandler-stack/GWVpc/PrivateSubnet2/RouteTableAssociation"
      }
    },
    "GWVpcPrivateSubnet2DefaultRoute16B5F270": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "GWVpcPrivateSubnet2RouteTable6364FB63"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "GWVpcPublicSubnet2NATGateway6931392F"
        }
      },
      "Metadata": {
        "aws:cdk:path": "gw-inferhandler-stack/GWVpc/PrivateSubnet2/DefaultRoute"
      }
    },
    "GWVpcIGW0A019878": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "gw-inferhandler-stack/GWVpc"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "gw-inferhandler-stack/GWVpc/IGW"
      }
    },
    "GWVpcVPCGW69CA13EA": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "GWVpc58472F73"
        },
        "InternetGatewayId": {
          "Ref": "GWVpcIGW0A019878"
        }
      },
      "Metadata": {
        "aws:cdk:path": "gw-inferhandler-stack/GWVpc/VPCGW"
      }
    },
    "InferHandlerfargateserviceautoscalingBDBD3EF3": {
      "Type": "AWS::ECS::Cluster",
      "Metadata": {
        "aws:cdk:path": "gw-inferhandler-stack/InferHandlerfargate-service-autoscaling/Resource"
      }
    },
    "InferHandlerTaskTaskRole33B1FB3F": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      },
      "Metadata": {
        "aws:cdk:path": "gw-inferhandler-stack/InferHandler-Task/TaskRole/Resource"
      }
    },
    "InferHandlerTask9EB3AA13": {
      "Type": "AWS::ECS::TaskDefinition",
      "Properties": {
        "ContainerDefinitions": [
          {
            "Essential": true,
            "Image": "856419311962.dkr.ecr.cn-north-1.amazonaws.com/recsys-graph-dkn-inference",
            "Name": "InferHandler-Contaner",
            "PortMappings": [
              {
                "ContainerPort": 80,
                "Protocol": "tcp"
              }
            ]
          }
        ],
        "Cpu": "256",
        "Family": "gwinferhandlerstackInferHandlerTask664F2EBF",
        "Memory": "512",
        "NetworkMode": "awsvpc",
        "RequiresCompatibilities": [
          "FARGATE"
        ],
        "TaskRoleArn": {
          "Fn::GetAtt": [
            "InferHandlerTaskTaskRole33B1FB3F",
            "Arn"
          ]
        }
      },
      "Metadata": {
        "aws:cdk:path": "gw-inferhandler-stack/InferHandler-Task/Resource"
      }
    },
    "InferHandlerServiceLB74B548CE": {
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
      "Properties": {
        "LoadBalancerAttributes": [
          {
            "Key": "deletion_protection.enabled",
            "Value": "false"
          }
        ],
        "Scheme": "internet-facing",
        "Subnets": [
          {
            "Ref": "GWVpcPublicSubnet1Subnet49EB8E88"
          },
          {
            "Ref": "GWVpcPublicSubnet2Subnet1A7D037F"
          }
        ],
        "Type": "network"
      },
      "DependsOn": [
        "GWVpcPublicSubnet1DefaultRoute76558746",
        "GWVpcPublicSubnet2DefaultRoute200BE8FE"
      ],
      "Metadata": {
        "aws:cdk:path": "gw-inferhandler-stack/InferHandler-Service/LB/Resource"
      }
    },
    "InferHandlerServiceLBPublicListener4412D4E9": {
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
      "Properties": {
        "DefaultActions": [
          {
            "TargetGroupArn": {
              "Ref": "InferHandlerServiceLBPublicListenerECSGroup4B6139E1"
            },
            "Type": "forward"
          }
        ],
        "LoadBalancerArn": {
          "Ref": "InferHandlerServiceLB74B548CE"
        },
        "Port": 80,
        "Protocol": "TCP"
      },
      "Metadata": {
        "aws:cdk:path": "gw-inferhandler-stack/InferHandler-Service/LB/PublicListener/Resource"
      }
    },
    "InferHandlerServiceLBPublicListenerECSGroup4B6139E1": {
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
      "Properties": {
        "Port": 80,
        "Protocol": "TCP",
        "TargetType": "ip",
        "VpcId": {
          "Ref": "GWVpc58472F73"
        }
      },
      "Metadata": {
        "aws:cdk:path": "gw-inferhandler-stack/InferHandler-Service/LB/PublicListener/ECSGroup/Resource"
      }
    },
    "InferHandlerService6AEB5D5E": {
      "Type": "AWS::ECS::Service",
      "Properties": {
        "Cluster": {
          "Ref": "InferHandlerfargateserviceautoscalingBDBD3EF3"
        },
        "DeploymentConfiguration": {
          "MaximumPercent": 200,
          "MinimumHealthyPercent": 50
        },
        "DesiredCount": 1,
        "EnableECSManagedTags": false,
        "HealthCheckGracePeriodSeconds": 60,
        "LaunchType": "FARGATE",
        "LoadBalancers": [
          {
            "ContainerName": "InferHandler-Contaner",
            "ContainerPort": 80,
            "TargetGroupArn": {
              "Ref": "InferHandlerServiceLBPublicListenerECSGroup4B6139E1"
            }
          }
        ],
        "NetworkConfiguration": {
          "AwsvpcConfiguration": {
            "AssignPublicIp": "DISABLED",
            "SecurityGroups": [
              {
                "Fn::GetAtt": [
                  "InferHandlerServiceSecurityGroup31C28816",
                  "GroupId"
                ]
              }
            ],
            "Subnets": [
              {
                "Ref": "GWVpcPrivateSubnet1Subnet5A9ADB27"
              },
              {
                "Ref": "GWVpcPrivateSubnet2Subnet19729786"
              }
            ]
          }
        },
        "TaskDefinition": {
          "Ref": "InferHandlerTask9EB3AA13"
        }
      },
      "DependsOn": [
        "InferHandlerServiceLBPublicListenerECSGroup4B6139E1",
        "InferHandlerServiceLBPublicListener4412D4E9"
      ],
      "Metadata": {
        "aws:cdk:path": "gw-inferhandler-stack/InferHandler-Service/Service/Service"
      }
    },
    "InferHandlerServiceSecurityGroup31C28816": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "gw-inferhandler-stack/InferHandler-Service/Service/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "GWVpc58472F73",
                "CidrBlock"
              ]
            },
            "Description": "Allow http inbound from VPC",
            "FromPort": 80,
            "IpProtocol": "tcp",
            "ToPort": 80
          }
        ],
        "VpcId": {
          "Ref": "GWVpc58472F73"
        }
      },
      "Metadata": {
        "aws:cdk:path": "gw-inferhandler-stack/InferHandler-Service/Service/SecurityGroup/Resource"
      }
    },
    "InferHandlerServiceTaskCountTarget02F9AB6D": {
      "Type": "AWS::ApplicationAutoScaling::ScalableTarget",
      "Properties": {
        "MaxCapacity": 2,
        "MinCapacity": 1,
        "ResourceId": {
          "Fn::Join": [
            "",
            [
              "service/",
              {
                "Ref": "InferHandlerfargateserviceautoscalingBDBD3EF3"
              },
              "/",
              {
                "Fn::GetAtt": [
                  "InferHandlerService6AEB5D5E",
                  "Name"
                ]
              }
            ]
          ]
        },
        "RoleARN": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition"
              },
              ":iam::",
              {
                "Ref": "AWS::AccountId"
              },
              ":role/aws-service-role/ecs.application-autoscaling.amazonaws.com/AWSServiceRoleForApplicationAutoScaling_ECSService"
            ]
          ]
        },
        "ScalableDimension": "ecs:service:DesiredCount",
        "ServiceNamespace": "ecs"
      },
      "Metadata": {
        "aws:cdk:path": "gw-inferhandler-stack/InferHandler-Service/Service/TaskCount/Target/Resource"
      }
    },
    "InferHandlerServiceTaskCountTargetCpuScalingBAEB672F": {
      "Type": "AWS::ApplicationAutoScaling::ScalingPolicy",
      "Properties": {
        "PolicyName": "gwinferhandlerstackInferHandlerServiceTaskCountTargetCpuScaling7E3249AF",
        "PolicyType": "TargetTrackingScaling",
        "ScalingTargetId": {
          "Ref": "InferHandlerServiceTaskCountTarget02F9AB6D"
        },
        "TargetTrackingScalingPolicyConfiguration": {
          "PredefinedMetricSpecification": {
            "PredefinedMetricType": "ECSServiceAverageCPUUtilization"
          },
          "ScaleInCooldown": 60,
          "ScaleOutCooldown": 60,
          "TargetValue": 50
        }
      },
      "Metadata": {
        "aws:cdk:path": "gw-inferhandler-stack/InferHandler-Service/Service/TaskCount/Target/CpuScaling/Resource"
      }
    },
    "CDKMetadata": {
      "Type": "AWS::CDK::Metadata",
      "Properties": {
        "Modules": "aws-cdk=1.74.0,@aws-cdk/assets=1.75.0,@aws-cdk/aws-apigateway=1.75.0,@aws-cdk/aws-apigatewayv2=1.75.0,@aws-cdk/aws-applicationautoscaling=1.75.0,@aws-cdk/aws-autoscaling=1.75.0,@aws-cdk/aws-autoscaling-common=1.75.0,@aws-cdk/aws-autoscaling-hooktargets=1.75.0,@aws-cdk/aws-batch=1.75.0,@aws-cdk/aws-certificatemanager=1.75.0,@aws-cdk/aws-cloudformation=1.75.0,@aws-cdk/aws-cloudfront=1.75.0,@aws-cdk/aws-cloudwatch=1.75.0,@aws-cdk/aws-codebuild=1.75.0,@aws-cdk/aws-codecommit=1.75 [...]
      },
      "Metadata": {
        "aws:cdk:path": "gw-inferhandler-stack/CDKMetadata/Default"
      },
      "Condition": "CDKMetadataAvailable"
    }
  },
  "Outputs": {
    "InferHandlerServiceLoadBalancerDNS6E24557A": {
      "Value": {
        "Fn::GetAtt": [
          "InferHandlerServiceLB74B548CE",
          "DNSName"
        ]
      }
    },
    "InferHandlerServiceURL": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "http://",
            {
              "Fn::GetAtt": [
                "InferHandlerServiceLB74B548CE",
                "LoadBalancerFullName"
              ]
            },
            "/"
          ]
        ]
      }
    }
  },
  "Conditions": {
    "CDKMetadataAvailable": {
      "Fn::Or": [
        {
          "Fn::Or": [
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-east-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-northeast-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-northeast-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-southeast-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-southeast-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ca-central-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "cn-north-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "cn-northwest-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-central-1"
              ]
            }
          ]
        },
        {
          "Fn::Or": [
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-north-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-west-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-west-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-west-3"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "me-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "sa-east-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-east-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-east-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-west-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-west-2"
              ]
            }
          ]
        }
      ]
    }
  }
}
